Nav Bar Alignment Fixed

--- a/React-Projects/DevIdentity/client/src/components/Navbar/Navbar.css
+++ b/React-Projects/DevIdentity/client/src/components/Navbar/Navbar.css
@@ -64,8 +64,8 @@ a:hover {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 5px;
-  padding: 13px 7px 0px 10px;
+  margin: 2px 0px 0px 0px;
+  padding: 7px 3px 0px 10px;
 }
 
 .copyrights:hover > small > a {
